tests/compile_fail/declare_scheduler_empty_binary.stderr
error: declare_scheduler!: `binary` must be a non-empty string
  --> tests/compile_fail/declare_scheduler_empty_binary.rs:10:14
   |
10 |     binary = "",
   |              ^^
